temp/kubernetes/webapp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp
  labels:
    app: webapp
spec:
  replicas: 3
  selector:
    matchLabels:
      app: webapp
  template:
    metadata:
      labels:
        app: webapp
    spec:
      containers:
      - name: webapp
        image: php1:l10
        ports:
        - containerPort: 80
        volumeMounts:
        - name: webpagefiles
          mountPath: /var/www/html
        # - name: smb-integration
        #   mountPath: /data/webapp
        #   readOnly: false
      volumes:
      - name: webpagefiles
        configMap:
          name: webpagefiles
      # - name: smb-integration
      #   persistentVolumeClaim:
      #     claimName: smb-integration-claim
---

kind: Service 
apiVersion: v1 
metadata:
  name: webapp
spec:
  type: NodePort
  selector:
    app: webapp 
  ports:
    - nodePort: 30000
      port: 80
      targetPort: 80
