temp/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: name-virtual-host-ingress
spec:
  rules:
  - host: intranet.testdomain.local
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: webapp
            port:
              number: 80

---
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: minimal-ingress2
#   annotations:
#     nginx.ingress.kubernetes.io/rewrite-target: /$2
# spec:
#   ingressClassName: nginx-webapp2
#   rules:
#   - host: 192.168.5.135.nip.io
#     http:
#       paths:
#       - path: "/insert.php(/|$)(.*)"
#         pathType: Prefix
#         backend:
#           service:
#             name: webapp
#             port:
#               number: 80
